# mcp-bouncer

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: RESULTS.md  agentdojo_workspace.yaml  results.json  run_agentdojo.py
docs/: manual-smoke.md
examples/: bouncer.yaml
scripts/: demo.py  inspect_schema.py  smoke_driver.py  smoke_driver_policy.py  smoke_engine.py
src/bouncer/: __init__.py  approvals.py  audit.py  benchmark_scoring.py  cli.py  engine.py  heuristics.py  policy.py  proxy.py  taint.py  types.py
src/bouncer/packs/: filesystem.yaml  gdrive.yaml  github.yaml  gmail.yaml  slack.yaml
tests/: test_approvals.py  test_audit.py  test_benchmark_scorer.py  test_cli.py  test_engine_constraints.py  test_engine_sink_gate.py  test_heuristics.py  test_packs.py  test_policy.py  test_proxy.py  test_smoke.py  test_taint.py  test_types.py
