[project]
name = "mcp-bouncer"
version = "0.1.0"
description = "A bouncer for your agent's tools: deterministic contract enforcement for MCP"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "anyio>=4.0",
    "mcp>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
benchmark = ["agentdojo>=0.1.35"]

[project.scripts]
bouncer = "bouncer.cli:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bouncer"]
